# ascii3d

./: CMakeLists.txt  README.md
include/: camera.h  linalg.h  mesh.h  raster.h  render.h
src/: camera.cpp  linalg.cpp  main.cpp  mesh.cpp  raster.cpp
